# akb1-command-center

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY.md  Caddyfile  LICENSE  README.md  SECURITY.md  docker-compose.proxy.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_backlog_items.py  0003_add_pnl_columns_and_programme_rates.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  rate_limit.py
backend/app/db/: __init__.py  migration_bootstrap.py
backend/app/models/: __init__.py  ai.py  auth.py  base.py  core.py  financial.py  intelligence.py  methodology.py  programme_rate.py  smart_ops.py  system.py  velocity.py
backend/app/schemas/: ai.py  commercial.py  core.py  currency.py  customer.py  delivery.py  health.py  kpi.py  ops.py  (+3 more)
backend/tests/: _pnl_fixtures.py  conftest.py  test_commercial.py  test_csv_import.py  test_currency.py  test_delivery.py  test_error_envelope.py  test_health.py  test_kpi.py  test_lineage_keys.py  test_migrations.py  test_models.py  test_ops_and_settings.py  test_pagination.py  test_pnl_bridge_endpoint.py  test_pnl_engine.py  test_pnl_filters.py  test_pnl_reconciliation.py  test_pnl_remaining_endpoints.py  test_pnl_waterfall_endpoint.py  test_programmes.py  test_reconciliation_atlas_feb_mar.py  test_reconciliation_phoenix_feb_mar.py  test_risks_and_customer.py  test_seed_monthly_actuals.py  test_seed_programme_rates.py  test_services.py
(+189 files in other folders)
