[project]
name = "akb1-command-center-backend"
version = "5.2.0"
description = "AKB1 Command Center — FastAPI backend"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"app/seed/data.py" = ["E501"]
"app/seed/delivery_data.py" = ["E501"]
"app/seed/commercial_data.py" = ["E501"]
"app/seed/customer_data.py" = ["E501"]
"app/seed/ai_data.py" = ["E501"]
"app/seed/ops_data.py" = ["E501"]
"app/seed/seeder.py" = ["PLR0913"]
"app/api/**" = ["B008"]        # FastAPI `Depends(...)` in defaults is idiomatic
"app/database.py" = ["PLW0603"] # module-level engine cache is deliberate
"app/main.py" = ["PLC0415"]    # late imports break a FastAPI circular dep
"tests/*" = ["PLR2004", "S101", "E402", "PLC0415", "SIM117"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true
exclude = ["alembic/"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/seed/data.py", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
